# taconem

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.yaml  README.md  TACONEM_CONTEXT.md  TACONEM_CONTEXT0.md  pyproject.toml
.chatgpt-cli/: config_taconem.json
.claude/: context_taconem.md
.cursor/: context_taconem.json
.raycast/: taconem_project_context.md
aguns/bootstrap/: AGENTS.md  BeadDaemon.md  Dashboard.md  DashboardCLI.md  MANIFEST.yaml  Ontology.md  Root.md  Summary.md
beads/bootstrap/: Ontology.md  Summary.md
obsidian/: TACONEM_CONTEXT_Obsidian.md
plans/: cli-architecture.md  daemon-architecture.md  memory-architecture.md
scripts/: create_taconem_extras.sh  validate_taconem.py
specs/: Constitution.md  concepts.md  logging.md  tasks.md
