[project]
name = "taconem"
version = "0.1.0"
description = "Tri-layer cognitive architecture for AI agents: Tasks, Concepts, and Embeddings."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ray Schnitzler" }
]

dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
]

[project.scripts]
taconem = "taconem.cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
